@@ -7,6 +7,7 @@ import org.springframework.context.annotation.Bean;
 import org.springframework.context.annotation.Configuration;
 
 import java.util.Arrays;
+import java.util.List;
 
 @Configuration
 @RequiredArgsConstructor
@@ -19,11 +20,16 @@ public class FilterConfig {
         registrationBean.setFilter(jwtTokenFilter);
 
         // 적용할 URL 패턴 설정
-        //registrationBean.setUrlPatterns(Arrays.asList("/v1/api/*"));
+        //registrationBean.setUrlPatterns(List.of("/v1/api/*"));
 
         // 제외할 URL 패턴 설정
         //registrationBean.addUrlPatterns("/v1/api/login");
-
+        //        registrationBean.addUrlPatterns(
+        //                "/v1/api/index.html",
+        //                "/v1/api/h2-console/*",
+        //                "/v1/api/swagger-ui/*",
+        //                "/v1/api/v3/api-docs/*",
+        //                "/v1/api/login/oauth2/code/*");
         return registrationBean;
     }
 }
